--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Haz clic en los botones para ver cambios.
   </div>
 
-  <img id="imagen" src="https://via.placeholder.com/150" alt="Imagen curiosa">
+  <img id="imagen" src="https://media.istockphoto.com/id/493886971/es/foto/%C3%A9cureuil.jpg?s=612x612&w=0&k=20&c=gy6kOkwC4PsU93JKOKUcBg7_aEhSS-fsiM2cyYMsA0E=" alt="Imagen curiosa">
 
   <div class="botones">
     <button onclick="cambiarColor()">Cambiar Color</button>
